# project38-or

./: .coderabbit.yaml  .gitignore  .mcp.json  =7.0.0  AGENTS.md  CLAUDE.md  DEPLOYMENT_PLAN_LITELLM.md  DEPLOYMENT_SUCCESS.md  Procfile  README.md  SECURITY.md  STATE.md  TELEGRAM_BOT_URL.txt  conftest.py  dangerfile.ts  example_usage.py  metadata.json  mkdocs.yml  pyproject.toml  railway.json  railway.personal.toml  railway.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  results.json  secret_report.txt
.claude/: settings.json
.github/: doc-policy.json
.hooks/: README.md  install.sh  pre-commit
config/: feature_flags.yaml
docs/: AUTONOMOUS_TESTING_SOLUTION.md  BOOTSTRAP_PLAN.md  JOURNEY.md  NEXT_PHASE_RECOMMENDATIONS.md  PRODUCTION_TESTING_GUIDE.md  RAILWAY_SETUP.md  SECURITY.md  SESSION_SUMMARY_2026-01-13.md  VISION.md  changelog.md  deployment.md  getting-started.md  google-workspace-mcp-setup.md  index.md  maintenance-runbook.md  manual-setup-guide.md  preview-deployments.md  railway-deployment-guide.md  railway-setup.md  wif-migration-plan.md
examples/: observability_demo.py
experiments/: README.md
n8n-workflows/: 01-railway-health-monitor.json  02-deployment-trigger.json  03-auto-rollback.json  README.md
research/: 02_documentation_infrastructure.md  02_sqlmodel_vs_sqlalchemy_async_persistence.md  03_claude_code_architecture_technical_guide.md  05_agentic_fortress_security_architecture.md  07_Autonomous Agent Layer for Personal AI System.md  07_claude_skills_enterprise_implementation.md  08_realtime_observability_dashboard_ai_agents.md  09_trust_score_implementation_autonomous_agents.md  10_docs_as_code_optimization_mkdocs.md  Autonomous Documentation Agents.md  claude-code-ralph-wiggum-framework.md  hybrid-browser-agent-architecture.md  long-running-agent-harness.md
scripts/: README.md  auto_weekly_review.py  collect-metrics.sh  create_experiment_issue.py  health-check.sh  run_email_agent.py  run_email_scan.py  run_evaluation.py  search_railway_emails.py  send_phase3_summary.py  setup-wif.ps1  setup-wif.py  setup-wif.sh  setup-workspace-mcp.ps1  setup-workspace-mcp.sh  setup_workspace_oauth.py
sql/: observability_schema.sql
src/: __init__.py  alert_manager.py  anomaly_response_integrator.py  autonomous_controller.py  autoscaling.py  backup_manager.py  cost_alert_service.py  cost_monitor.py  credential_lifecycle.py  dependency_updater.py  doc_updater.py  exceptions.py  experiment_results.py  gcp_tunnel_client.py  github_api.py  github_app_client.py  github_auth.py  github_auth.sh  github_pr.py  github_results.py  learning_service.py  logging_config.py  ml_anomaly_detector.py  n8n_client.py  (+7 more)
(+713 files in other folders)
