[project]
name = "project38-or"
version = "0.1.0"
description = "Personal AI System with GCP Secret Manager integration"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "S101",   # assert statements (ok in tests)
    "S104",   # binding to all interfaces (ok for dev)
    "S603",   # subprocess call (we use shutil.which for full paths)
    "S607",   # subprocess with partial path (gh CLI path varies)
    "B008",   # function call in defaults (ok for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # assert, hardcoded secrets OK in tests
"scripts/*" = ["E501", "F401", "I001"]  # Long lines, unused imports, import order OK in scripts
"src/api/routes/metrics.py" = ["S608"]  # SQL INTERVAL requires string interpolation (not user input)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
